--- a/sap.tex
+++ b/sap.tex
@@ -605,7 +605,7 @@ The prior distributions for the intercept and average intervention effect parame
 \]
 noting that we expect the proportion vaccinated by 28 days to be closer to 1 than 0.
 
-The priors on the \(\gamma\) terms will be set so as to enforce the relevant sum-to-zero constraints with a marginal variance of 1 on the constrained parameters.
+The priors on the \(\gamma\) terms will be set so as to enforce the relevant sum-to-zero constraints
 \[
 \begin{aligned}
 S_l &= \mathrm{I}_l - l^{-1}\mathrm{J}_l \\
